[workspace]

members = [
    "cargo-cpp-shared",
    "cargo-cpp-cli"
]

# See also https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true        # Automatically strip symbols from the binary.
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization