[package]
name = "cargo-cpp-cli"
version = "0.1.0"
authors = ["René Hansen <rene@hansen-audio.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-cpp-shared = { path = "../cargo-cpp-shared" }
clap = { version = "4.1.8", features = ["derive"] }
log = "0.4.17"
env_logger = "0.10.0"

[[bin]]
name = "cargo-cpp"
path = "src/main.rs"